<resources>
    <string name="app_name">Workshop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="email_hint">Enter email</string>
    <string name="password">Enter password</string>
    <string name="fullname">Enter name</string>
    <string name="phonenumber">Enter phonenumber</string>
    <string name="sign_up">Register</string>
    <string name="start_terms">By signing in you agree our Privacy Policy and Terms of Service.</string>
    <string name="sign_in">Already a member?</string>
    <string name="welcome">Welcome</string>
    <string name="a_smart_library">Login to workshop</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New user? Register</string>
    <string name="home">Go to home</string>
    <string name="action_contact">Contact us</string>
    <string name="aboutus">Mail me at: mishra.abhi8888@gmail.com or call 9454855514 for more details. </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms">User inforamtion is stored locally on device.</string>
    <string name="state">State</string>
    <string name="Phone">phone</string>
    <string name="apply">Apply Now</string>
    <string name="viewwork">My workshops</string>
    <string name="nofound">No workshop registered</string>
    <string name="alllist">Registered Workshop</string>
</resources>
