<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/colorPrimaryDark">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/icon1"
                    app:civ_border_color="#444"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/profilename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/profileemail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:textSize="18sp" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/my_workshop"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="6dp"
                    android:background="@drawable/home_button"
                    android:fontFamily="sans-serif"
                    android:text="@string/viewwork"
                    android:textAllCaps="false"
                    android:textColor="#ffffff" />

            </LinearLayout>


        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0px"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:padding="8dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profilestate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:textColor="#333"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="3dp"
                        android:text="@string/state"
                        android:textColor="#777"
                        android:textSize="20sp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="0px"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:padding="8dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardUseCompatPadding="true">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/profilephone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="3dp"
                        android:textColor="#333"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="3dp"
                        android:text="@string/Phone"
                        android:textColor="#777"
                        android:textSize="20sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/terms"
            android:textColor="#bbb"
            android:textSize="12sp" />

    </LinearLayout>


</FrameLayout>